Terminate lines with % in bootstrap part
This is 'paranoia': expl3 can be loaded with formats other than
LaTeX, and at least in theory TeX could therefore be in hmode.

--- a/l3kernel/l3bootstrap.dtx
+++ b/l3kernel/l3bootstrap.dtx
@@ -57,7 +57,7 @@
       \begingroup
         \catcode 32 = 10 %
         \GetIdInfoAuxI
-    }
+    }%
 %    \end{macrocode}
 %   A first check for a completely empty \textsc{svn} field. If that is
 %   not the case, there is a second case when a file created using
@@ -90,7 +90,7 @@
       \fi
       \tempa
       \GetIdInfoLog
-    }
+    }%
 %    \end{macrocode}
 %   Here, |#1| is |Id|, |#2| is the file name, |#3| is the extension,
 %   |#4| is the version, |#5| is the check in date and |#6| is the check in
@@ -119,14 +119,14 @@
             }%
         \fi
         \tempa
-    }
+    }%
 %    \end{macrocode}
 %   Convert an \textsc{svn}-style date into a \LaTeX{}-style one.
 %    \begin{macrocode}
   \csname protected\endcsname\gdef\GetIdInfoAuxIII$#1-#2-#3$%
     {%
       \def\ExplFileDate{#1/#2/#3}%
-    }
+    }%
 %    \end{macrocode}
 %   During loading of \pkg{expl3}, module information is added to the log.
 %   This function gets redefined once loading is complete.
@@ -138,15 +138,15 @@
           L3 Module:
             \ExplFileName\space
             \ExplFileDate\space v\ExplFileVersion\space \ExplFileDescription
-        }
-    }
+        }%
+    }%
 \endgroup
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
 % \end{macro}
 \GetIdInfo$Id$
-  {L3 Bootstrap code}
+  {L3 Bootstrap code}%
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -267,10 +267,10 @@
 % some pretty basic character codes set up.
 %    \begin{macrocode}
 %<*initex>
-\catcode `\{ = 1 \relax
-\catcode `\} = 2 \relax
-\catcode `\# = 6 \relax
-\catcode `\^ = 7 \relax
+\catcode `\{ = 1\relax
+\catcode `\} = 2\relax
+\catcode `\# = 6\relax
+\catcode `\^ = 7\relax
 %</initex>
 %    \end{macrocode}
 %
@@ -278,7 +278,7 @@
 % safe side.
 %    \begin{macrocode}
 %<*initex>
-\catcode `\^^I = 10 \relax
+\catcode `\^^I = 10\relax
 %</initex>
 %    \end{macrocode}
 %
@@ -291,7 +291,7 @@
 \begingroup\expandafter\expandafter\expandafter\endgroup
 \expandafter\ifx\csname directlua\endcsname\relax
 \else
-  \directlua{tex.enableprimitives("", tex.extraprimitives())}
+  \directlua{tex.enableprimitives("", tex.extraprimitives())}%
 \fi
 %</initex>
 %    \end{macrocode}
@@ -366,7 +366,7 @@
       l3kernel.charcat_table = charcat_table
     }%
 %</package>
-    \directlua{require("expl3")}
+    \directlua{require("expl3")}%
 %    \end{macrocode}
 %   As the user might be making a custom format, no assumption is made about
 %   matching package mode with only loading the \Lua{} code once. Instead, a
@@ -448,7 +448,7 @@
         \def\PackageError#1#2#3%
           {%
             \errhelp{#3}%
-            \errmessage{#1 Error: #2}
+            \errmessage{#1 Error: #2}%
           }%
       \fi
       \edef\next
@@ -490,15 +490,15 @@
 %    \begin{macrocode}
 %<*package>
 \begingroup
-  \def\@tempa{LaTeX2e}
-  \def\next{}
+  \def\@tempa{LaTeX2e}%
+  \def\next{}%
   \ifx\fmtname\@tempa
     \expandafter\ifx\csname extrafloats\endcsname\relax
       \def\next
         {%
           \RequirePackage{etex}%
           \csname reserveinserts\endcsname{32}%
-        }
+        }%
     \fi
   \fi
 \expandafter\endgroup
@@ -517,7 +517,7 @@
 %   \cs{ExplSyntaxOn} is used. For format mode, there is no need to save
 %   category codes so that step is skipped.
 %    \begin{macrocode}
-\protected\def\ExplSyntaxOff{}
+\protected\def\ExplSyntaxOff{}%
 %<*package>
 \protected\edef\ExplSyntaxOff
   {%
@@ -533,7 +533,7 @@
     \catcode 126 = \the\catcode 126\relax
     \endlinechar = \the\endlinechar\relax
     \chardef\csname\detokenize{l__kernel_expl_bool}\endcsname = 0\relax
-  }
+  }%
 %</package>
 %    \end{macrocode}
 % \end{macro}
@@ -555,7 +555,7 @@
 % \begin{variable}{\l__kernel_expl_bool}
 %   The status for experimental code syntax: this is on at present.
 %    \begin{macrocode}
-\chardef\l__kernel_expl_bool = 1 ~
+\chardef\l__kernel_expl_bool = 1\relax
 %    \end{macrocode}
 %\end{variable}
 %
