One \tl_to_lowercase:n removed in l3tl-analysis
At present this one cannot be done using \char_set_active_eq:NN
or similar. The reason is that an \outer active char might appear,
most obviously ^^L, and this will break at the stage that recording
active chars happens. Probably that should be fixed in l3tokens.

--- a/l3experimental/l3str/l3tl-analysis.dtx
+++ b/l3experimental/l3str/l3tl-analysis.dtx
@@ -422,7 +422,7 @@
   \cs_new_protected:Npn \@@_disable_loop:N #1
     {
       \tex_lccode:D \c_zero `#1 ~
-      \tl_to_lowercase:n { \tex_let:D ^^@ } \tex_undefined:D
+      \tex_lowercase:D { \tex_let:D ^^@ } \tex_undefined:D
       \@@_disable_loop:N
     }
 \group_end:
