Note that blank args can still contain spaces to pass on

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -1955,7 +1955,8 @@
 %   grabbed argument is entirely enclosed by braces. There are a couple of
 %   extra factors to allow for: the argument might be entirely empty, and
 %   spaces at the start and end of the input must be retained around a brace
-%   group.
+%   group. Also notice that a \emph{blank} argument might still contain
+%   spaces.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_grab_D_aux:NNnN #1#2#3#4
   {
