Adjust \l_char_active_seq to use escaped tokens
This is a lot easier for general management, particularly given
that we now have \char_set_active:Npn, etc., not altering
catcodes.

--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -338,8 +338,9 @@
 %   Used to track which tokens may require special handling at the document
 %   level as they are (or have been at some point)
 %   of category \meta{active} (catcode~$13$). Each entry in
-%   the sequence consists of a single active character. Active tokens should be
-%   added to the sequence when they are defined for general document use.
+%   the sequence consists of a single escaped token, for example |\~|.
+%   Active tokens should be added to the sequence when they are defined for
+%   general document use.
 % \end{variable}
 %
 % \begin{variable}[added = 2012-01-23, updated = 2015-11-11]{\l_char_special_seq}
@@ -1164,34 +1165,18 @@
 %
 % \begin{variable}{\l_char_active_seq, \l_char_special_seq}
 %   Two sequences for dealing with special characters. The first is characters
-%   which may be active, and contains the active characters themselves  to
-%   allow easy redefinition. The second longer list is for \enquote{special}
-%   characters more generally, and these are escaped so that for example
+%   which may be active, the second longer list is for \enquote{special}
+%   characters more generally. Both lists are escaped so that for example
 %   bulk code assignments can be carried out. In both cases, the order is
 %   by \textsc{ascii} character code (as is done in for example
-%   \cs{ExplSyntaxOn}). The only complication is dealing with |_|, which
-%   requires the use of \cs{use:n} \emph{and} \cs{use:nn}.
+%   \cs{ExplSyntaxOn}).
 %    \begin{macrocode}
 \seq_new:N \l_char_special_seq
 \seq_set_split:Nnn \l_char_special_seq { }
   { \  \" \# \$ \% \& \\ \^ \_ \{ \} \~ }
 \seq_new:N \l_char_active_seq
-\use:n
-  {
-    \group_begin:
-    \char_set_catcode_active:N \"
-    \char_set_catcode_active:N \$
-    \char_set_catcode_active:N \&
-    \char_set_catcode_active:N \^
-    \char_set_catcode_active:N \_
-    \char_set_catcode_active:N \~
-    \use:nn
-      {
-        \group_end:
-        \seq_set_split:Nnn \l_char_active_seq { }
-      }
-  }
-    { { " $ & ^ _ ~ } } %$
+\seq_set_split:Nnn \l_char_special_seq { }
+  { \" \$ \& \^ \_ \~ }
 %    \end{macrocode}
 % \end{variable}
 %
