--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -690,7 +690,7 @@
   {
     \group_begin:
       \seq_map_inline:Nn \l_char_active_seq
-        { \cs_set_nopar:Npx ##1 { \token_to_str:N ##1 } }
+        { \char_set:active:Npx ##1 { \cs_to_str:N ##1 } }
       \tl_set:Nx \l_@@_internal_name_tl {#1}
       \tl_set:Nx \l_@@_internal_name_tl
         { \tl_to_str:N \l_@@_internal_name_tl }
