--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -576,15 +576,15 @@
 %
 % \section{Additions to \pkg{l3prg}}
 %
-% Minimal (lazy) evaluation can be obtained using the functions
-% \cs{bool_all_p:n}, \cs{bool_and_p:nn}, \cs{bool_any_p:n}, or
-% \cs{bool_or_p:nn}, which only evaluate their boolean expression
+% Minimal (lazy) evaluation can be obtained using the conditionals
+% \cs{bool_lazy_all:nTF}, \cs{bool_lazy_and:nnTF}, \cs{bool_lazy_any:nTF}, or
+% \cs{bool_lazy_or:nnTF}, which only evaluate their boolean expression
 % arguments when they are needed to determine the resulting truth
 % value.  For example, when evaluating the boolean expression
 % \begin{verbatim}
-%     \bool_and_p:nn
+%     \bool_lazy_and_p:nn
 %       {
-%         \bool_any_p:n
+%         \bool_lazy_any_p:n
 %           {
 %             { \int_compare_p:n { 2 = 3 } }
 %             { \int_compare_p:n { 4 <= 4 } }
@@ -594,58 +594,62 @@
 %       { ! \int_compare_p:n { 2 = 4 } }
 % \end{verbatim}
 % the line marked with |is skipped| is not expanded because the result
-% of \cs{bool_any_p:n} is known once the second boolean expression is
+% of \cs{bool_lazy_any_p:n} is known once the second boolean expression is
 % found to be logically \texttt{true}.  On the other hand, the last
 % line is expanded because its logical value is needed to determine the
-% result of \cs{bool_and_p:nn}.
+% result of \cs{bool_lazy_and_p:nn}.
 %   
-% \begin{function}[EXP, added = 2015-09-28]{\bool_all_p:n}
+% \begin{function}[EXP, pTF, added = 2015-11-15]{\bool_lazy_all:n}
 %   \begin{syntax}
-%     \cs{bool_all_p:n} \{ \Arg{boolexpr_1} \Arg{boolexpr_2} $\cdots$ \Arg{boolexpr_N} \}
+%     \cs{bool_lazy_all_p:n} \{ \Arg{boolexpr_1} \Arg{boolexpr_2} $\cdots$ \Arg{boolexpr_N} \}
+%     \cs{bool_lazy_all:nTF} \{ \Arg{boolexpr_1} \Arg{boolexpr_2} $\cdots$ \Arg{boolexpr_N} \} \Arg{true code} \Arg{false code}
 %   \end{syntax}
 %   Implements the \enquote{And} operation on the \meta{boolean
 %   expressions}, hence is \texttt{true} if all of them are
 %   \texttt{true} and \texttt{false} if any of them is \texttt{false}.
 %   Contrarily to the infix operator |&&|, only the \meta{boolean
 %   expressions} which are needed to determine the result of
-%   \cs{bool_all_p:n} will be evaluated.  See also \cs{bool_and_p:nn}
+%   \cs{bool_lazy_all:nTF} will be evaluated.  See also \cs{bool_lazy_and:nnTF}
 %   when there are only two \meta{boolean expressions}.
 % \end{function}
 %
-% \begin{function}[EXP, added = 2015-09-28]{\bool_and_p:nn}
+% \begin{function}[EXP, pTF, added = 2015-11-15]{\bool_lazy_and:nn}
 %   \begin{syntax}
-%     \cs{bool_and_p:nn} \Arg{boolexpr_1} \Arg{boolexpr_2}
+%     \cs{bool_lazy_and_p:nn} \Arg{boolexpr_1} \Arg{boolexpr_2}
+%     \cs{bool_lazy_and:nnTF} \Arg{boolexpr_1} \Arg{boolexpr_2} \Arg{true code} \Arg{false code}
 %   \end{syntax}
 %   Implements the \enquote{And} operation between two boolean
 %   expressions, hence is \texttt{true} if both are \texttt{true}.
 %   Contrarily to the infix operator |&&|, the \meta{boolexpr_2} will
 %   only be evaluated if it is needed to determine the result of
-%   \cs{bool_and_p:nn}.  See also \cs{bool_all_p:n} when there are more
+%   \cs{bool_lazy_and:nnTF}.  See also \cs{bool_lazy_all:nTF} when there are more
 %   than two \meta{boolean expressions}.
 % \end{function}
 %
-% \begin{function}[EXP, added = 2015-09-28]{\bool_any_p:n}
+% \begin{function}[EXP, pTF, added = 2015-11-15]{\bool_lazy_any:n}
 %   \begin{syntax}
-%     \cs{bool_any_p:n} \{ \Arg{boolexpr_1} \Arg{boolexpr_2} $\cdots$ \Arg{boolexpr_N} \}
+%     \cs{bool_lazy_any_p:n} \{ \Arg{boolexpr_1} \Arg{boolexpr_2} $\cdots$ \Arg{boolexpr_N} \}
+%     \cs{bool_lazy_any:nTF} \{ \Arg{boolexpr_1} \Arg{boolexpr_2} $\cdots$ \Arg{boolexpr_N} \} \Arg{true code} \Arg{false code}
 %   \end{syntax}
 %   Implements the \enquote{Or} operation on the \meta{boolean
 %   expressions}, hence is \texttt{true} if any of them is
 %   \texttt{true} and \texttt{false} if all of them are \texttt{false}.
 %   Contrarily to the infix operator \verb"||", only the \meta{boolean
 %   expressions} which are needed to determine the result of
-%   \cs{bool_any_p:n} will be evaluated.  See also \cs{bool_or_p:nn}
+%   \cs{bool_lazy_any:nTF} will be evaluated.  See also \cs{bool_lazy_or:nnTF}
 %   when there are only two \meta{boolean expressions}.
 % \end{function}
 %
-% \begin{function}[EXP, added = 2015-09-28]{\bool_or_p:nn}
+% \begin{function}[EXP, pTF, added = 2015-11-15]{\bool_lazy_or:nn}
 %   \begin{syntax}
-%     \cs{bool_or_p:nn} \Arg{boolexpr_1} \Arg{boolexpr_2}
+%     \cs{bool_lazy_or_p:nn} \Arg{boolexpr_1} \Arg{boolexpr_2}
+%     \cs{bool_lazy_or:nnTF} \Arg{boolexpr_1} \Arg{boolexpr_2} \Arg{true code} \Arg{false code}
 %   \end{syntax}
 %   Implements the \enquote{Or} operation between two boolean
 %   expressions, hence is \texttt{true} if either one is \texttt{true}.
 %   Contrarily to the infix operator \verb"||", the \meta{boolexpr_2}
 %   will only be evaluated if it is needed to determine the result of
-%   \cs{bool_or_p:nn}.  See also \cs{bool_any_p:n} when there are more
+%   \cs{bool_lazy_or:nnTF}.  See also \cs{bool_lazy_any:nTF} when there are more
 %   than two \meta{boolean expressions}.
 % \end{function}
 %
@@ -2563,57 +2567,65 @@
 %<@@=bool>
 %    \end{macrocode}
 %
-% \begin{macro}{\bool_all_p:n}
-% \begin{macro}[aux]{\@@_all_aux:n}
+% \begin{macro}[pTF]{\bool_lazy_all:n}
+% \begin{macro}[aux]{\@@_lazy_all:n}
 %   Go through the list of expressions, stopping whenever an expression
 %   is \texttt{false}.  If the end is reached without finding any
 %   \texttt{false} expression, then the result is \texttt{true}.
 %    \begin{macrocode}
-\cs_new:Npn \bool_all_p:n #1
-  { \@@_all_aux:n #1 \q_recursion_tail \q_recursion_stop }
-\cs_new:Npn \@@_all_aux:n #1
+\prg_new_conditional:Npnn \bool_lazy_all:n #1 { p , T , F , TF }
+  { \@@_lazy_all:n #1 \q_recursion_tail \q_recursion_stop }
+\cs_new:Npn \@@_lazy_all:n #1
   {
-    \quark_if_recursion_tail_stop_do:nn {#1} { \c_true_bool }
+    \quark_if_recursion_tail_stop_do:nn {#1} { \prg_return_true: }
     \bool_if:nF {#1}
-      { \use_i_delimit_by_q_recursion_stop:nw { \c_false_bool } }
-    \@@_all_aux:n
+      { \use_i_delimit_by_q_recursion_stop:nw { \prg_return_false: } }
+    \@@_lazy_all:n
   }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\bool_and_p:nn}
+% \begin{macro}[pTF]{\bool_lazy_and:nn}
 %   Only evaluate the second expression if the first is \texttt{true}.
 %    \begin{macrocode}
-\cs_new:Npn \bool_and_p:nn #1#2
-  { \bool_if:nTF {#1} { \bool_if_p:n {#2} } { \c_false_bool } }
+\prg_new_conditional:Npnn \bool_lazy_and:nn #1#2 { p , T , F , TF }
+  {
+    \bool_if:nTF {#1}
+      { \bool_if:nTF {#2} { \prg_return_true: } { \prg_return_false: } }
+      { \prg_return_false: }
+  }
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\bool_any_p:n}
-% \begin{macro}[aux]{\@@_any_aux:n}
+% \begin{macro}[pTF]{\bool_lazy_any:n}
+% \begin{macro}[aux]{\@@_lazy_any:n}
 %   Go through the list of expressions, stopping whenever an expression
 %   is \texttt{true}.  If the end is reached without finding any
 %   \texttt{true} expression, then the result is \texttt{false}.
 %    \begin{macrocode}
-\cs_new:Npn \bool_any_p:n #1
-  { \@@_any_aux:n #1 \q_recursion_tail \q_recursion_stop }
-\cs_new:Npn \@@_any_aux:n #1
+\prg_new_conditional:Npnn \bool_lazy_any:n #1 { p , T , F , TF }
+  { \@@_lazy_any:n #1 \q_recursion_tail \q_recursion_stop }
+\cs_new:Npn \@@_lazy_any:n #1
   {
-    \quark_if_recursion_tail_stop_do:nn {#1} { \c_false_bool }
+    \quark_if_recursion_tail_stop_do:nn {#1} { \prg_return_false: }
     \bool_if:nT {#1}
-      { \use_i_delimit_by_q_recursion_stop:nw { \c_true_bool } }
-    \@@_any_aux:n
+      { \use_i_delimit_by_q_recursion_stop:nw { \prg_return_true: } }
+    \@@_lazy_any:n
   }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\bool_or_p:nn}
+% \begin{macro}[pTF]{\bool_lazy_or:nn}
 %   Only evaluate the second expression if the first is \texttt{false}.
 %    \begin{macrocode}
-\cs_new:Npn \bool_or_p:nn #1#2
-  { \bool_if:nTF {#1} { \c_true_bool } { \bool_if_p:n {#2} } }
+\prg_new_conditional:Npnn \bool_lazy_or:nn #1#2 { p , T , F , TF }
+  {
+    \bool_if:nTF {#1}
+      { \prg_return_true: }
+      { \bool_if:nTF {#2} { \prg_return_true: } { \prg_return_false: } }
+  }
 %    \end{macrocode}
 % \end{macro}
 %
