Update Umath primitives for LuaTeX v0.85

--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -833,6 +833,7 @@
   \__kernel_primitive:NN \Udelimiter                \utex_delimiter:D
   \__kernel_primitive:NN \Udelimiterover            \utex_delimiterover:D
   \__kernel_primitive:NN \Udelimiterunder           \utex_delimiterunder:D
+  \__kernel_primitive:NN \Uhextensible              \utex_hextensible:D
   \__kernel_primitive:NN \Umathaccent               \utex_mathaccent:D
   \__kernel_primitive:NN \Umathaxis                 \utex_mathaxis:D
   \__kernel_primitive:NN \Umathbinbinspacing        \utex_binbinspacing:D
@@ -844,9 +845,12 @@
   \__kernel_primitive:NN \Umathbinpunctspacing      \utex_binpunctspacing:D
   \__kernel_primitive:NN \Umathbinrelspacing        \utex_binrelspacing:D
   \__kernel_primitive:NN \Umathchar                 \utex_mathchar:D
+  \__kernel_primitive:NN \Umathcharclass            \utex_mathcharclass:D
   \__kernel_primitive:NN \Umathchardef              \utex_mathchardef:D
+  \__kernel_primitive:NN \Umathcharfam              \utex_mathcharfam:D
   \__kernel_primitive:NN \Umathcharnum              \utex_mathcharnum:D
   \__kernel_primitive:NN \Umathcharnumdef           \utex_mathcharnumdef:D
+  \__kernel_primitive:NN \Umathcharslot             \utex_mathcharslot:D
   \__kernel_primitive:NN \Umathclosebinspacing      \utex_closebinspacing:D
   \__kernel_primitive:NN \Umathcloseclosespacing    \utex_closeclosespacing:D
   \__kernel_primitive:NN \Umathcloseinnerspacing    \utex_closeinnerspacing:D
@@ -931,6 +935,8 @@
   \__kernel_primitive:NN \Umathrelordspacing        \utex_relordspacing:D
   \__kernel_primitive:NN \Umathrelpunctspacing      \utex_relpunctspacing:D
   \__kernel_primitive:NN \Umathrelrelspacing        \utex_relrelspacing:D
+  \__kernel_primitive:NN \Umathskewedfractionhgap   \utex_skewedfractionhgap:D
+  \__kernel_primitive:NN \Umathskewedfractionvgap   \utex_skewedfractionvgap:D
   \__kernel_primitive:NN \Umathspaceafterscript     \utex_spaceafterscript:D
   \__kernel_primitive:NN \Umathstackdenomdown       \utex_stackdenomdown:D
   \__kernel_primitive:NN \Umathstacknumup           \utex_stacknumup:D
@@ -952,6 +958,8 @@
   \__kernel_primitive:NN \Uoverdelimiter            \utex_overdelimiter:D
   \__kernel_primitive:NN \Uradical                  \utex_radical:D
   \__kernel_primitive:NN \Uroot                     \utex_root:D
+  \__kernel_primitive:NN \Uskewed                   \utex_skewed:D
+  \__kernel_primitive:NN \Uskewedwithdelims         \utex_skewedwithdelims:D
   \__kernel_primitive:NN \Ustack                    \utex_stack:D
   \__kernel_primitive:NN \Ustartdisplaymath         \utex_startdisplaymath:D
   \__kernel_primitive:NN \Ustartmath                \utex_startmath:D
@@ -960,6 +968,7 @@
   \__kernel_primitive:NN \Usubscript                \utex_subscript:D
   \__kernel_primitive:NN \Usuperscript              \utex_superscript:D
   \__kernel_primitive:NN \Uunderdelimiter           \utex_underdelimiter:D
+  \__kernel_primitive:NN \Uvextensible              \utex_vextensible:D
 %    \end{macrocode}
 % Primitives from p\TeX{}.
 %    \begin{macrocode}
