Allow for primitive renaming in a more flexible way
This will help deal with LuaTeX renames without needing to
test every one.

--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -693,6 +693,28 @@
   \__kernel_primitive:NN \synctex                   \pdftex_synctex:D
   \__kernel_primitive:NN \tagcode                   \pdftex_tagcode:D
 %    \end{macrocode}
+% Post \pdfTeX{} primitive availability gets more complex. Both \XeTeX{} and
+% \LuaTeX{} have varying names for some primitives from \pdfTeX{}. Particularly
+% for \LuaTeX{} tracking all of that would be hard. Instead, we now check that
+% we only save primitives if they actually exist.
+%    \begin{macrocode}
+%</initex|names|package>
+%<*initex|package>
+  \tex_long:D \tex_def:D \use_ii:nn #1#2 {#2}
+  \tex_long:D \tex_def:D \use_none:n #1 { }
+  \tex_long:D \tex_def:D \__kernel_primitive:NN #1#2
+    {
+      \etex_ifdefined:D #1
+        \tex_expandafter:D \use_ii:nn
+      \tex_fi:D
+        \use_none:n { \tex_global:D \tex_let:D #2 #1 }
+%<*initex>
+      \tex_global:D \tex_let:D #1 \tex_undefined:D
+%</initex>
+    }
+%</initex|package>
+%<*initex|names|package>
+%    \end{macrocode}
 % \XeTeX{}-specific primitives. Note that \XeTeX{}'s \tn{strcmp} is
 % handled earlier and is \enquote{rolled up} into \tn{pdfstrcmp}. With
 % the exception of the version primitives these don't carry |XeTeX| through
