--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -775,6 +775,13 @@
   \__kernel_primitive:NN \XeTeXrevision             \xetex_XeTeXrevision:D
   \__kernel_primitive:NN \XeTeXversion              \xetex_XeTeXversion:D
 %    \end{macrocode}
+% Primitives from \pdfTeX{} that \XeTeX{} renames: also helps with
+% \LuaTeX{}.
+%    \begin{macrocode}
+  \__kernel_primitive:NN \ifprimitive               \pdftex_primitive:D
+  \__kernel_primitive:NN \primitive                 \pdftex_primitive:D
+  \__kernel_primitive:NN \shellescape               \pdftex_shellescape:D
+%    \end{macrocode}
 % Primitives from \LuaTeX{}, some of which have been ported back to
 % \XeTeX{}. Notice that \tn{expanded} was intended for \pdfTeX{}~1.50 but
 % as that was not released we call this a \LuaTeX{} primitive.
@@ -1126,22 +1133,10 @@
   \tex_let:D \luatex_rightghost:D            \luatexrightghost
   \tex_let:D \luatex_textdir:D               \luatextextdir
 \tex_fi:D
-%</package>
 %    \end{macrocode}
-% Tidy up some \XeTeX{} renames and the fact that some
-% format-building processes leave a couple of questionable decisions about.
-% (There may at some stage be \LuaTeX{} renames of the same sort to address.)
-%    \begin{macrocode}
-%<*initex|package>
-\etex_unless:D \etex_ifdefined:D \pdftex_ifprimitive:D
-  \tex_expandafter:D \tex_let:D
-    \tex_csname:D pdftex_ifprimitive:D \tex_expandafter:D \tex_endcsname:D
-    \tex_csname:D ifprimitive \tex_endcsname:D
-  \tex_let:D \pdftex_primitive:D \primitive
-  \tex_let:D \pdftex_shellescape:D \shellescape
-\tex_fi:D
-%    \end{macrocode}
-% Only \pdfTeX{} and \LuaTeX{} define \tn{pdfmapfile} and \tn{pdfmapline}.
+% Only \pdfTeX{} and \LuaTeX{} define \tn{pdfmapfile} and \tn{pdfmapline}:
+% Tidy up the fact that some format-building processes leave
+% a couple of questionable decisions about that!
 %    \begin{macrocode}
 \tex_ifnum:D 0
   \etex_ifdefined:D \pdftex_pdftexversion:D 1 \tex_fi:D
@@ -1150,11 +1145,13 @@
   \tex_let:D \pdftex_mapfile:D \tex_undefined:D
   \tex_let:D \pdftex_mapline:D \tex_undefined:D
 \tex_fi:D
+%</package>
 %    \end{macrocode}
 % Older \XeTeX{} versions use |\XeTeX| as the prefix for the Unicode math
 % primitives it knows. That is tided up here (we support \XeTeX{} versions
 % from 0.9994 but this change was in 0.9999).
 %    \begin{macrocode}
+%<*initex|package>
 \etex_ifdefined:D \XeTeXdelcode
   \tex_let:D \utex_delcode:D        \XeTeXdelcode
   \tex_let:D \utex_delcodenum:D     \XeTeXdelcodenum
