Primitives that LuaTeX now renames from pdfTeX originals

--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -861,6 +861,34 @@
   \__kernel_primitive:NN \rightghost                \luatex_rightghost:D
   \__kernel_primitive:NN \textdir                   \luatex_textdir:D
 %    \end{macrocode}
+% Primitives from \pdfTeX{} that \LuaTeX{} renames.
+%    \begin{macrocode}
+  \__kernel_primitive:NN \adjustspacing               \pdftex_adjustspacing:D
+  \__kernel_primitive:NN \copyfont                    \pdftex_copyfont:D
+  \__kernel_primitive:NN \draftmode                   \pdftex_draftmode:D
+  \__kernel_primitive:NN \expandglyphsinfont          \pdftex_fontexpand:D
+  \__kernel_primitive:NN \ignoreligaturesinfont       \pdftex_ignoreligaturesinfont:D
+  \__kernel_primitive:NN \insertht                    \pdftex_insertht:D
+  \__kernel_primitive:NN \lastsavedboxresourceindex   \pdftex_pdflastxform:D
+  \__kernel_primitive:NN \lastsavedimageresourceindex \pdftex_pdflastximage:D
+  \__kernel_primitive:NN \lastsavedimageresourcepages \pdftex_pdflastximagepages:D
+  \__kernel_primitive:NN \lastxpos                    \pdftex_lastxpos:D
+  \__kernel_primitive:NN \lastypos                    \pdftex_lastypos:D
+  \__kernel_primitive:NN \normaldeviate               \pdftex_normaldeviate:D
+  \__kernel_primitive:NN \outputmode                  \pdftex_pdfoutput:D
+  \__kernel_primitive:NN \pageheight                  \pdftex_pageheight:D
+  \__kernel_primitive:NN \pagewidth                   \pdftex_pagewith:D
+  \__kernel_primitive:NN \protrudechars               \pdftex_protrudechars:D
+  \__kernel_primitive:NN \pxdimen                     \pdftex_pxdimen:D
+  \__kernel_primitive:NN \randomseed                  \pdftex_randomseed:D
+  \__kernel_primitive:NN \useboxresource              \pdftex_pdfrefxform:D
+  \__kernel_primitive:NN \useimageresource            \pdftex_pdfrefximage:D
+  \__kernel_primitive:NN \savepos                     \pdftex_savepos:D
+  \__kernel_primitive:NN \saveboxresource             \pdftex_pdfxform:D
+  \__kernel_primitive:NN \saveimageresource           \pdftex_pdfximage:D
+  \__kernel_primitive:NN \setrandomseed               \pdftex_setrandomseed:D
+  \__kernel_primitive:NN \uniformdeviate              \pdftex_uniformdeviate:D
+%    \end{macrocode}
 % The set of Unicode math primitives were introduced by \XeTeX{} and \LuaTeX{}
 % in a somewhat complex fashion: a few first as |\XeTeX...| which were then
 % renamed with \LuaTeX{} having a lot more. These names now all start
