Say processors are forbidden for expandable commands

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -648,6 +648,7 @@
 %     \item The \enquote{optional group} argument types \texttt{g} and
 %       \texttt{G} are not available.
 %     \item The \enquote{verbatim} argument type \texttt{v} is not available.
+%     \item Argument processors (using \texttt{>}) are not available.
 %     \item It is not possible to differentiate between, for example
 %       |\foo[| and |\foo{[}|: in both cases the \texttt{[} will be
 %       interpreted as the start of an optional argument. As a
@@ -655,7 +656,7 @@
 %       in the standard version.
 %   \end{itemize}
 %   \pkg{xparse} will issue an error if an argument specifier is given
-%   which does not conform to the first three requirements. The last
+%   which does not conform to the first six requirements. The last
 %   item is an issue when the function is used, and so is beyond the
 %   scope of \pkg{xparse} itself.
 % \end{function}
