Adjust format-mode setup for LuaTeX v0.85

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -206,13 +206,23 @@
 %    \begin{macrocode}
 %<*initex>
 %<*pdfmode>
-\pdftex_pdfhorigin:D          = 1 true in \scan_stop:
-\pdftex_pdfvorigin:D          = 1 true in \scan_stop:
-\pdftex_pdfdecimaldigits:D    = 3         \scan_stop:
-\pdftex_pdfpkresolution:D     = 600       \scan_stop:
-\pdftex_pdfminorversion:D     = 5         \scan_stop:
-\pdftex_pdfcompresslevel:D    = 9         \scan_stop:
-\pdftex_pdfobjcompresslevel:D = 2         \scan_stop:
+\group_begin:
+  \cs_set_proteced:Npx \@@_tmp:w #1 =
+    {
+      \tex_global:D
+      \cs_if_exist:NTF \luatex_pdfvariable:D
+        { \exp_not:N \luatex_pdfvariable:D #1 }
+        { \exp_not:c { pdftex_pdf #1 :D } }
+          =
+    }
+  \@@_tmp:w horigin          = 1 true in \scan_stop:
+  \@@_tmp:w vorigin          = 1 true in \scan_stop:
+  \@@_tmp:w decimaldigits    = 3         \scan_stop:
+  \@@_tmp:w pkresolution     = 600       \scan_stop:
+  \@@_tmp:w minorversion     = 5         \scan_stop:
+  \@@_tmp:w compresslevel    = 9         \scan_stop:
+  \@@_tmp:w objcompresslevel = 2         \scan_stop:
+\group_end:
 %</pdfmode>
 %</initex>
 %    \end{macrocode}
