Use stream 128 for \c_term_iow
This is safe with the LuaTeX v0.85 update and existing engines.

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -1227,7 +1227,7 @@
 %   transcript file (\cs{c_term_iow}).
 %    \begin{macrocode}
 \cs_new_eq:NN \c_log_iow  \c_minus_one
-\cs_new_eq:NN \c_term_iow \c_sixteen
+\int_const:Nn \c_term_iow { 128 }
 %    \end{macrocode}
 % \end{variable}
 %
