Load (new) Unicode data file system
This will be on CTAN 'real soon now'!

--- a/l3kernel/l3bootstrap.dtx
+++ b/l3kernel/l3bootstrap.dtx
@@ -506,6 +506,26 @@
 %</package>
 %    \end{macrocode}
 %
+% \subsection{Unicode set up}
+%
+% The Unicode engines start in Ini\TeX{} mode with category codes, \emph{etc.},
+% for code points beyond $127$ all treated as \enquote{other} characters.
+% Various properties can be derived from the Unicode data files and this
+% is the same here as it would be for plain or \LaTeXe{}. There are shared
+% loaders available, but these of course need standard (Ini)\TeX{} category
+% codes and primitive availablity. They are therefore loaded \emph{very}
+% early.
+%    \being{macrocode}
+%<*initex>
+\ifdefined\Umathcode
+  \input load-unicode-casing %
+  \input load-unicode-punctuation %
+  \input load-unicode-east-asian-classes %
+  \input load-unicode-math-classes %
+\fi
+%</initex>
+%    \end{macrocode}
+%
 % \subsection{The \LaTeX3 code environment}
 %
 % The code environment is now set up.
