Move all character encoding set up to l3bootstrap
This puts the Unicode set up (which must be here) in the same place
as the 8-bit one (which traditionally is in 'final').

Note that this retains the assumption of EC encoding for 8-bit engines.
Input encoding and hyphenation pattern loading is yet to do.

--- a/l3kernel/l3bootstrap.dtx
+++ b/l3kernel/l3bootstrap.dtx
@@ -506,20 +506,99 @@
 %</package>
 %    \end{macrocode}
 %
-% \subsection{Unicode set up}
+% \subsection{Character data}
 %
-% The Unicode engines start in Ini\TeX{} mode with category codes, \emph{etc.},
-% for code points beyond $127$ all treated as \enquote{other} characters.
-% Various properties can be derived from the Unicode data files and this
-% is the same here as it would be for plain or \LaTeXe{}. There are shared
-% loaders available, but these of course need standard (Ini)\TeX{} category
-% codes and primitive availablity. They are therefore loaded \emph{very}
-% early.
-%    \being{macrocode}
+% \TeX{} needs various pieces of data to be set about characters, in particular
+% which ones to treat as letters and which \tn{lccode} values apply as these
+% affect hyphenation. It makes most sense to set this and related information
+% up in one place. Whilst for \LuaTeX{} hyphenation patterns can be read
+% anywhere, other engines have to build them into the format and so we
+% \emph{must} do this set up before reading the patterns. For the Unicode
+% engines, there are shared loaders available to obtain the relevant
+% information irectly from the Unicode Consortium data files. These need
+% standard (Ini)\TeX{} category codes and primitive availablity and must
+% therefore loaded \emph{very} early. This has a knock-on effect on the
+% $8$-bit set up: it makes sense to do the defintions for those here as
+% well so it is all in one place.
+%
+% For \XeTeX{} and \LuaTeX{}, which are natively Unicode engines, simply
+% load the Unicode data.
+%    \begin{macrocode}
 %<*initex>
 \ifdefined\Umathcode
   \input load-unicode-data %
+\else
+%    \end{macrocode}
+% For the $8$-bit engines an encoding scheme must be chosen. At present,
+% this is the EC (|T1|) scheme, with the assumption that languages for which
+% this is not appropriate will be used with one of the Unicode engines.
+%    \begin{macrocode}
+  \begingroup
+%    \end{macrocode}
+% Lower case chars: map to themselves when lower casing and down by |"20| when
+% upper casing. (The characters |a|--|z| are set up correctly by Ini\TeX{}.)
+%    \begin{macrocode}
+    \def\temp{%
+      \ifnum\count0>\count2 %
+      \else
+        \global\lccode\count0 = \count0 %
+        \global\uccode\count0 = \numexpr\count0 - "20\relax
+        \advance\count0 by 1 %
+        \expandafter\temp
+      \fi
+    }
+    \count0="A0 %
+    \count2="BC %
+    \temp
+    \count0="E0 %
+    \count2="FF %
+    \temp
+%    \end{macrocode}
+% Upper case chars: map up by |"20| when lower casing, to themselves when upper
+% casing and require an \tn{sfcode} of $999$. (The characters |A|--|Z| are set
+% up correctly by Ini\TeX{}.)
+%    \begin{macrocode}
+    \def\temp{%
+      \ifnum\count0>\count2 %
+      \else
+        \global\lccode\count0 = \numexpr\count0 + "20\relax
+        \global\uccode\count0 = \count0 %
+        \global\sfcode\count0 = 999 %
+        \advance\count0 by 1 %
+        \expandafter\temp
+      \fi
+    }
+    \count0="80 %
+    \count2="9C %
+    \temp
+    \count0="C0 %
+    \count2="DF %
+    \temp
+%    \end{macrocode}
+% A few special cases where things are not as one might expect using the above
+% pattern: dotless-I, dotless-J, dotted-I and d-bar.
+%    \begin{macrocode}
+    \global\lccode`\^^Y = `\^^Y %
+    \global\uccode`\^^Y = `\I %
+    \global\lccode`\^^Z = `\^^Z %
+    \global\uccode`\^^Y = `\J %
+    \global\lccode"9D = `\i %
+    \global\uccode"9D = "9D %
+    \global\lccode"9E = "9E %
+    \global\uccode"9E = "D0 %
+%    \end{macrocode}
+% Allow hyphenation at a zero-width glyph (used to break up ligatures or
+% to place accents between characters).
+%    \begin{macrocode}
+    \global\lccode23 = 23 %
+  \endgroup
 \fi
+%    \end{macrocode}
+% In all cases it makes sense to set up |-| to map to itself: this allows
+% hyphenation of the rest of a word following it (suggested by
+% Lars Helstr\"om).
+%    \begin{macrocode}
+\global\lccode`\-=`\- %
 %</initex>
 %    \end{macrocode}
 %
