Allow fo ^^L not being active
ConTeXt has it as a space, which caused errors with MkIV as it led
to ^^@ begin forbidden.

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -4488,7 +4488,9 @@
 %    \begin{macrocode}
 \group_begin:
 %<*package>
-  \cs_set_nopar:Npn ^^L { }
+  \if_int_compare:w \tex_catcode:D 32 = 13 \scan_stop:
+    \cs_set_nopar:Npn ^^L { }
+  \fi:
 %</package>
   \char_set_catcode_other:n { 0 }
   \if_int_odd:w 0
