Make ^^L active and safe
This should cover all formats.

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -4488,6 +4488,7 @@
 %    \begin{macrocode}
 \group_begin:
 %<*package>
+  \char_set_catcode_active:N \^^L
   \cs_set_nopar:Npn ^^L { }
 %</package>
   \char_set_catcode_other:n { 0 }
