Use Unicode data from TeX codes where appropriate
This new approach requires no 'pre-processed' data, only
the raw Unicode files and what is already loaded by
XeTeX/LuaTeX. For these engines, it is reasonable to assume a
fixed set of catcodes, etc., as the Unicode mappings are clear.

Note that pdfTeX, etc., stay 7-bit here but could be extended
to 8-bit if we really want. (Probably that is 'safe' for format
mode but not for package mode, as in the latter encodings can't
readily be predicted.)

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -3031,7 +3031,7 @@
 % The mechanisms needed for case changing are somewhat involved, particularly
 % to allow for all of the special cases. These functions also require the
 % appropriate data extracted from the Unicode documentation (either manually
-% or automatically), which is covered by \pkg{l3unicode-data}.
+% or automatically).
 %
 % \begin{macro}[EXP]{\tl_if_head_eq_catcode:oNTF}
 %   Extra variants.
@@ -3079,8 +3079,10 @@
 % \begin{macro}[aux, EXP]{\@@_change_case_math_space:wNNnn}
 % \begin{macro}[aux, EXP]{\@@_change_case_N_type:Nnnn}
 % \begin{macro}[aux, EXP]{\@@_change_case_char:Nnn}
-% \begin{macro}[aux, EXP]{\@@_change_case_char:Nn}
-% \begin{macro}[aux, EXP]{\@@_change_case_char:NNNNNNNNn}
+% \begin{macro}[aux, EXP]{\@@_change_case_char:nN}
+% \begin{macro}[aux, EXP]{\@@_change_case_char_aux:nN}
+% \begin{macro}[aux]
+%   {\@@_lookup_lower:N, \@@_lookup_upper:N, \@@_lookup_title:N}
 % \begin{macro}[aux, EXP]{\@@_change_case_cs:Nnnn}
 % \begin{macro}[aux, EXP]{\@@_change_case_cs:nNnnn}
 % \begin{macro}[aux, EXP]{\@@_change_case_cs_three:NNNw}
@@ -3295,26 +3297,34 @@
         #1
         {
           \use:c { @@_change_case_ #2 _ sigma:Nnw } #1
-            { \@@_change_case_char:Nn #1 {#2} }
+            { \@@_change_case_char:nN {#2} #1 }
         }
   }
-\cs_new:Npn \@@_change_case_char:Nn #1#2
+\cs_new:Npn \@@_change_case_char:nN #1#2
   {
     \@@_change_case_output:fwn
       {
-        \str_case:nvF #1 { c__unicode_ #2 _exceptions_tl }
-          {
-            \exp_after:wN \@@_change_case_char:NNNNNNNNn
-              \int_use:N \__int_eval:w 1000000 + `#1 \__int_eval_end:
-                #1 {#2}
-          }
+        \cs_if_exist:cTF { c__unicode_ #1 _ #2 _tl }
+          { \tl_use:c { c__unicode_ #1 _ #2 _tl } }
+          { \@@_change_case_char_aux:nN {#1} #2 }
       }
   }
-\cs_new:Npn \@@_change_case_char:NNNNNNNNn #1#2#3#4#5#6#7#8#9
+\cs_if_exist:NTF \utex_char:D
   {
-    \str_case:nvF #8
-      { c__unicode_ #9 _ #6 _X_ #7 _tl }
-      { \exp_stop_f: #8 }
+    \cs_new:Npn \@@_change_case_char_aux:nN #1#2
+      {
+        \int_compare:nNnTF { \use:c { @@_lookup_ #1 :N } #2 } = { 0 }
+          { \exp_stop_f: #2 }
+          {
+            \utex_char:D \use:c { @@_lookup_ #1 :N } #2
+          }
+      }
+    \cs_new_protected:Npn \@@_lookup_lower:N #1 { \tex_lccode:D `#1 }
+    \cs_new_protected:Npn \@@_lookup_upper:N #1 { \tex_uccode:D `#1 }
+    \cs_new_eq:NN \@@_lookup_title:N \@@_lookup_upper:N
+  }
+  {
+    \cs_new:Npn \@@_change_case_char_aux:nN #1#2 { \exp_stop_f: #2 }
   }
 %    \end{macrocode}
 %   If a control sequence has been given as the argument and it is not on
@@ -3476,6 +3486,7 @@
 \cs_new:Npn \@@_change_case_cs_expand:NN #1#2
   { \exp_after:wN #2 #1 }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
@@ -3793,6 +3804,53 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{variable}
+%   {
+%     \c__unicode_std_sigma_tl    ,
+%     \c__unicode_final_sigma_tl  ,
+%     \c__unicode_accents_lt_tl   ,
+%     \c__unicode_dot_above_tl    ,
+%     \c__unicode_dotless_i_tl    ,
+%     \c__unicode_dotted_I_tl     ,
+%     \c__unicode_i_ogonek_tl     ,
+%     \c__unicode_I_ogonek_tl     ,
+%     \c__unicode_upper_Eszett_tl
+%   }
+%    \begin{macrocode}
+\cs_if_exist:NTF \utex_char:D
+  {
+    \tl_const:Nx \c__unicode_std_sigma_tl    { \utex_char:D "03C3 ~ }
+    \tl_const:Nx \c__unicode_final_sigma_tl  { \utex_char:D "03C2 ~ }
+    \tl_const:Nx \c__unicode_accents_lt_tl
+      {
+        \utex_char:D "00CC ~
+          { \utex_char:D "0069 ~ \utex_char:D "0307 ~ \utex_char:D "0300 ~ }
+        \utex_char:D "00CD ~
+          { \utex_char:D "0069 ~ \utex_char:D "0307 ~ \utex_char:D "0301 ~ }
+        \utex_char:D "0128 ~
+          { \utex_char:D "0069 ~ \utex_char:D "0307 ~ \utex_char:D "0303 ~ }
+      }
+    \tl_const:Nx \c__unicode_dot_above_tl    { \utex_char:D "0307 ~ }
+    \tl_const:Nx \c__unicode_dotless_i_tl    { \utex_char:D "0131 ~ }
+    \tl_const:Nx \c__unicode_dotted_I_tl     { \utex_char:D "0130 ~ }
+    \tl_const:Nx \c__unicode_i_ogonek_tl     { \utex_char:D "012F ~ }
+    \tl_const:Nx \c__unicode_I_ogonek_tl     { \utex_char:D "012E ~ }
+    \tl_const:Nx \c__unicode_upper_Eszett_tl { \utex_char:D "1E9E ~}
+  }
+  {
+    \tl_const:Nn \c__unicode_std_sigma_tl    { }
+    \tl_const:Nn \c__unicode_final_sigma_tl  { }
+    \tl_const:Nn \c__unicode_accents_lt_tl   { }
+    \tl_const:Nn \c__unicode_dot_above_tl    { }
+    \tl_const:Nn \c__unicode_dotless_i_tl    { I }
+    \tl_const:Nn \c__unicode_dotted_I_tl     { i }
+    \tl_const:Nn \c__unicode_i_ogonek_tl     { }
+    \tl_const:Nn \c__unicode_I_ogonek_tl     { }
+    \tl_const:Nn \c__unicode_upper_Eszett_tl { }
+  }
+%    \end{macrocode}
+% \end{variable}
+%
 % \begin{macro}[aux, EXP]{\@@_mixed_case:nn}
 % \begin{macro}[aux, EXP]{\@@_mixed_case_aux:nn}
 % \begin{macro}[aux, EXP]{\@@_mixed_case_loop:wn}
@@ -3801,7 +3859,7 @@
 % \begin{macro}[aux, EXP]{\@@_mixed_case_N_type:Nwn}
 % \begin{macro}[aux, EXP]{\@@_mixed_case_N_type:NNNnn}
 % \begin{macro}[aux, EXP]{\@@_mixed_case_N_type:Nnn}
-% \begin{macro}[aux, EXP]{\@@_mixed_case_char:Nn}
+% \begin{macro}[aux, EXP]{\@@_mixed_case_char:N}
 % \begin{macro}[aux, EXP]{\@@_mixed_case_skip:N}
 % \begin{macro}[aux, EXP]{\@@_mixed_case_skip:NN}
 % \begin{macro}[aux, EXP]{\@@_mixed_case_skip_tidy:Nwn}
@@ -3944,11 +4002,7 @@
 \cs_new:Npn \@@_mixed_case_skip:NN #1#2
   {
     \quark_if_recursion_tail_stop_do:nn {#2}
-      {
-        \exp_args:Nf \@@_mixed_case_char:nN
-          { \str_case:nVF #1 \c__unicode_mixed_exceptions_tl \exp_stop_f: }
-          #1
-      }
+      { \@@_mixed_case_char:N #1 }
     \int_compare:nNnT { `#1 }  = { `#2 }
       {
         \use_i_delimit_by_q_recursion_stop:nw
@@ -3963,11 +4017,14 @@
   {
     \@@_mixed_case_loop:wn #2 \q_recursion_stop
   }
-\cs_new:Npn \@@_mixed_case_char:nN #1#2
+\cs_new:Npn \@@_mixed_case_char:N #1
   {
-    \tl_if_blank:nTF {#1}
-      { \@@_change_case_char:Nn #2 { upper } }
-      { \@@_change_case_output:nwn {#1} }
+    \cs_if_exist:cTF { c__unicode_title_  #1 _tl }
+      {
+        \@@_change_case_output:fwn
+          { \tl_use:c { c__unicode_title_ #1 _tl } }
+      }
+      { \@@_change_case_char:nN { upper } #1 }
   }
 %    \end{macrocode}
 % \end{macro}
